8241091: AArch64: "bad AD file" with VM option "-XX:-UsePopCountInstruction"

Reviewed-by: aph